<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_panel"
    android:descendantFocusability="afterDescendants"
    android:focusable="false"
    android:orientation="vertical"
    android:paddingStart="18dp"
    android:paddingTop="@dimen/overscan_v"
    android:paddingEnd="@dimen/overscan_h"
    android:paddingBottom="@dimen/overscan_v">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="afterDescendants"
        android:focusable="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tabTabs"
            style="@style/PanelTab"
            android:text="@string/panel_tabs" />

        <TextView
            android:id="@+id/tabBookmarks"
            style="@style/PanelTab"
            android:text="@string/panel_bookmarks" />

        <TextView
            android:id="@+id/tabHistory"
            style="@style/PanelTab"
            android:text="@string/panel_history" />

        <TextView
            android:id="@+id/tabSettings"
            style="@style/PanelTab"
            android:text="@string/panel_settings" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="12dp"
        android:background="@color/surface_line" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:descendantFocusability="afterDescendants"
        android:focusable="false">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/panelList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:descendantFocusability="afterDescendants"
            android:focusable="false"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:scrollbars="none" />

        <TextView
            android:id="@+id/panelEmpty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_history"
            android:textColor="@color/text_secondary"
            android:textSize="@dimen/text_body"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/panelFooter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:descendantFocusability="afterDescendants"
        android:focusable="false"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btnPanelPrimary"
            style="@style/PanelTab"
            android:layout_marginEnd="8dp"
            android:text="@string/cd_new_tab" />

        <TextView
            android:id="@+id/btnPanelSecondary"
            style="@style/PanelTab"
            android:text="@string/cd_close" />
    </LinearLayout>
</LinearLayout>
